# clawd-domain-marketplace

./: .gitignore  .gitmodules  BUILD-PLAN.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  MCP_TESTING.md  PRD-v2.md  README.md  SECURITY-AUDIT.md  TESTING.md  THIRD_PARTY_SETUP.md  TROUBLESHOOTING.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  database.py  main.py  payments.py  porkbun.py  relayer.py
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.ts
scripts/: setup.sh  start-backend.sh
